--- a/backgrounds.css
+++ b/backgrounds.css
@@ -1,9 +1,26 @@
-body {
-  padding: 0;
-  margin: 0
+html {
+  font-family: sans-serif;
+  font-size: 16px;
 }
 
-/* Utility classes */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+p {
+  margin: 1em 0;
+  line-height: 1.5em;
+}
+
+/* --------------
+Utility classes
+-------------- */
+/* Lengths */
 .h-100 {
   height: 100vh;
 }
@@ -17,7 +34,88 @@ body {
   width: 100vw;
 }
 
-/* Multiple background images */
+.w-50 {
+  width: 50%;
+}
+
+.lean {
+  transform: rotate(-10deg);
+  transform-origin: bottom left;
+  transition: .5s;
+}
+
+.lean:hover {
+  transform: rotate(0deg)
+}
+
+/* Box model properties */
+.p-5 {
+  padding: 5rem;
+}
+
+/* Positioning */
+.center-all {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* ---------------------
+ Typography classes
+ --------------------- */
+.fs-1 {
+  font-size: 1rem;
+}
+
+.fs-2 {
+  font-size: 2rem;
+}
+
+.fs-3 {
+  font-size: 3rem;
+}
+
+.fs-4 {
+  font-size: 4rem;
+}
+
+.small-caps {
+  font-variant: small-caps;
+}
+
+/* COMPONENTS */
+.well {
+  width: 400px;
+  max-width: 100%;
+  background: #eee;
+  box-shadow: 2px 2px 2px 2px #ccc;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  padding: 2em;
+}
+
+/* -- buttons -- */
+.btn {
+  outline: none;
+  border: 1px solid #ccc;
+  background-color: #fefefe;
+  border-radius: 0.1rem;
+  padding: 0.5rem 1.5rem;
+  cursor: pointer;
+  box-shadow: 0.25rem 0.25rem #000;
+  font-size: 1em;
+  filter: brightness(1);
+}
+
+.btn:hover {
+  opacity: 0.8;
+  filter: brightness(0.95);
+  transition: all .3s;
+}
+
+/* BACKGROUNDS */
+/* multiple background images */
 .multiple-bg {
   background-image: url(http://findicons.com/files/icons/861/tweet_my_web/128/flying_bird.png), url(https://i.imgur.com/FlpE77g.png), url(https://www.nasa.gov/sites/default/files/usdamoscow.jpg);
   background-repeat: no-repeat, no-repeat, no-repeat;
@@ -25,7 +123,7 @@ body {
   background-size: auto, auto, cover;
 }
 
-/* Clip art background */
+/* clip art background */
 #clipped-title {
   display: flex;
   align-items: center;
@@ -40,8 +138,24 @@ body {
 
 #clipped-title h1 {
   font-size: 300px;
-  font-family: sans-serif;
   text-align: center;
   margin: 0;
   padding: 0;
+}
+
+/* gradient background */
+.linear-gradient-bg {
+  background-image: linear-gradient(45deg, #cc7620 40%, #a83a3a 50%, #143e5d 40%);
+  /* background-image: repeating-linear-gradient(45deg, yellow, yellow 10px, red 10px, red 20px); */
+}
+
+.radial-gradient-bg {
+  background-image: radial-gradient(circle closest-corner at 35%, #cc7620 40%, #143e5d 4%);
+  /* background-image: repeating-radial-gradient(circle at 50% 50%, #eee, #ccc 50px); */
+}
+
+.conic-gradient-bg {
+  background-image: conic-gradient(from 130deg, #cc7620, #143e5d);
+  /* background: conic-gradient(red, orange, yellow, green, blue, indigo, violet);
+  background: conic-gradient(black 0 33%, yellow 0 66%, red 0 99%); */
 }
