--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -67,14 +67,20 @@ header {
 }
 
 .focus-components {
-  max-width: 600px;
+  max-width: 700px;
   margin: auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
 }
 
 @media (min-width: 576px) {
+  .focus-components {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 768px) {
   .focus-components {
     grid-template-columns: repeat(4, 1fr);
   }
