Adjust box-shadow on .focus-link

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -96,7 +96,7 @@ header {
   align-items: center;
   border: 1px solid #285880;
   border-radius: 0.25rem;
-  box-shadow: 0 0 2px #ddd;
+  box-shadow: 0 0 2px #78baf2;
   overflow: hidden;
   background-color: #285880;
   font-size: 16px;
@@ -105,7 +105,7 @@ header {
 }
 
 .focus-link:hover {
-  box-shadow: 0 0 3px #ddd;
+  box-shadow: -0 2px 5px 2px #78baf2;
   opacity: 1;
   transform: scale(1.05);
 }
