add padding to header

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -28,7 +28,7 @@ header {
   justify-content: space-between;
   -ms-align-items: space-between;
   align-items: center;
-  padding: 0 0.5rem;
+  padding: 0.5rem;
   background-color: #15324a;
 }
 
