--- a/assets/css/grid-and-flex.css
+++ b/assets/css/grid-and-flex.css
@@ -47,6 +47,12 @@ a {
   grid-gap: 1rem;
 }
 
+@media (min-width: 768px) {
+  .grid-container {
+    height: 400px;
+  }
+}
+
 .grid-item {
   display: flex;
   justify-content: center;
