--- a/assets/css/background.css
+++ b/assets/css/background.css
@@ -1,20 +1,5 @@
-html {
-  font-family: sans-serif;
-  font-size: 16px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  padding: 0;
-  margin: 0;
-}
-
-p {
-  margin: 1em 0;
-  line-height: 1.5em;
+.header {
+  justify-content: center;
 }
 
 /* --------------
