--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -8,9 +8,14 @@
   box-sizing: border-box;
 }
 
-body {
+html {
   min-height: 100vh;
+  font-size: 16px;
+  line-height: 1.5rem;
   font-family: sans-serif;
+}
+
+body {
   background-color: #000;
 }
 
@@ -23,13 +28,20 @@ a:hover {
   opacity: 0.7;
 }
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
   -ms-align-items: space-between;
   align-items: center;
   padding: 0.5rem;
   background-color: #15324a;
+  margin-bottom: 1rem;
+}
+
+.header h1 {
+  color: #aaa;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 /* Utility classes */
@@ -70,7 +82,7 @@ header {
 
 /* Components section */
 .play-focus {
-  padding: 0.5rem;
+  padding: 0 0.5rem;
   text-align: center;
 }
 
