--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -11,12 +11,13 @@
 html {
   min-height: 100vh;
   font-size: 16px;
-  line-height: 1.5rem;
+  line-height: 1.15;
   font-family: sans-serif;
 }
 
 body {
   background-color: #000;
+  color: #fff;
 }
 
 a {
