--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -107,7 +107,7 @@ a:hover {
   color: #bbb;
 }
 
-/* Components section */
+/* Play focus section */
 .play-focus {
   padding: 0 0.5rem;
   text-align: center;
@@ -139,8 +139,9 @@ a:hover {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+  position: relative;
   border: 1px solid #285880;
   border-radius: 0.25rem;
   box-shadow: 0 0 2px #78baf2;
@@ -161,6 +162,8 @@ a:hover {
   padding: 0.5rem 0.75rem;
   margin-bottom: 0.5rem;
   border-radius: 2px;
+  position: absolute;
+  bottom: 0;
   background-color: #000;
   color: #fff;
   box-shadow: 0 0 3px #50a7f0;
@@ -169,4 +172,85 @@ a:hover {
 
 .focus-link:hover .focus-badge {
   box-shadow: 0 -3px 8px #78baf2;
+}
+
+.background {
+  background-image:
+    repeating-radial-gradient(circle at 80% 20%, #4c6d88 10px, #285880 25px);
+}
+
+.grid-showoff {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 0.25rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 0.25rem;
+}
+
+.grid-showoff div {
+  border-radius: 4px;
+  background-color: #497eab;
+}
+
+.animation .anime-object-1 {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #497eab;
+  position: absolute;
+  animation: anime-1 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(0, 1.31, .67, .26);
+}
+
+@keyframes anime-1 {
+  0% {
+    top: 0%;
+  }
+
+  100% {
+    top: 60%;
+    box-shadow: 0 5px 2px #000;
+  }
+}
+
+.animation .anime-object-2 {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #497eab;
+  position: absolute;
+  left: 10%;
+  animation: anime-2 1s;
+  animation-delay: 0.5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(0.6, 1.31, .67, .26);
+}
+
+@keyframes anime-2 {
+  0% {
+    top: 0%;
+    left: 10%;
+    box-shadow: 0 -5px 2px #000;
+  }
+
+  100% {
+    top: 60%;
+    left: 10%;
+    box-shadow: 0 5px 2px #000;
+    transform: perspective(100px) rotateY(25deg);
+  }
+}
+
+.typography p {
+  margin: 0;
+  font-family: serif;
+  font-size: 6rem;
+  font-weight: bold;
+  color: #497eab;
 }
