--- a/assets/css/background.css
+++ b/assets/css/background.css
@@ -50,7 +50,7 @@ section {
 .linear-gradient-bg {
   height: 400px;
   background-image:
-    linear-gradient(45deg, #cc7620 40%, #a83a3a 50%, #143e5d 40%);
+    linear-gradient(160deg, #dbe7f7 33.33%, #8aa2c3 33.33% 66.66%, #43618a 66.66%);
   /* background-image: repeating-linear-gradient(45deg, yellow, yellow 10px, red 10px, red 20px); */
 }
 
