--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,3 +1,20 @@
+/* I didn't use master.css to responsive-navbar.html
+on purpose, I intend create an entirely different
+scope for the navbar */
+/* // Extra small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... } */
 :root {
   /* --width-25: 25%; */
 }
