--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -192,8 +192,11 @@ a:hover {
 }
 
 .background {
-  background-image:
-    repeating-radial-gradient(circle at 80% 20%, #4c6d88 10px, #285880 25px);
+  background-image: repeating-radial-gradient(
+    circle at 80% 20%,
+    #4c6d88 10px,
+    #285880 25px
+  );
 }
 
 .grid-showoff {
@@ -221,7 +224,7 @@ a:hover {
   animation: anime-1 1s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
-  animation-timing-function: cubic-bezier(0, 1.31, .67, .26);
+  animation-timing-function: cubic-bezier(0, 1.31, 0.67, 0.26);
 }
 
 @keyframes anime-1 {
@@ -246,7 +249,7 @@ a:hover {
   animation-delay: 0.5s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
-  animation-timing-function: cubic-bezier(0.6, 1.31, .67, .26);
+  animation-timing-function: cubic-bezier(0.6, 1.31, 0.67, 0.26);
 }
 
 @keyframes anime-2 {
