--- a/assets/css/responsive-navbar.css
+++ b/assets/css/responsive-navbar.css
@@ -1,20 +1,3 @@
-/* I didn't use master.css to responsive-navbar.html
-on purpose, I intend create an entirely different
-scope for the navbar */
-/* // Extra small devices (portrait phones, less than 576px)
-// No media query for `xs` since this is the default in Bootstrap
-
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) { ... }
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... } */
 *,
 *::after,
 *::before {
@@ -82,8 +65,21 @@ button {
   }
 }
 
+.bar {
+  display: block;
+  width: 40px;
+  height: 4px;
+  border-radius: 3px;
+  background-color: #000;
+  transition: 0.3s;
+}
+
+.bar:not(:first-of-type):not(:last-of-type) {
+  margin: 4px 0;
+}
+
 .navbar-toggle:active .bar:not(:first-of-type):not(:last-of-type) {
-  visibility: hidden;
+  /* visibility: hidden; */
   /* display: none; */
 }
 
@@ -101,23 +97,8 @@ button {
 .navbar-toggle:focus .bar:first-of-type,
 .navbar-toggle:active .bar:last-of-type,
 .navbar-toggle:focus .bar:last-of-type {
-  width: 35px;
-  position: absolute;
-  /* right: 50%; */
-  box-shadow: 0 2px 2px red;
-}
-
-.bar {
-  display: block;
-  width: 40px;
-  height: 4px;
-  border-radius: 3px;
-  background-color: #000;
-  transition: 0.3s;
-}
-
-.bar:not(:first-of-type):not(:last-of-type) {
-  margin: 4px 0;
+  /* position: absolute; */
+  top: 45%;
 }
 
 .collapse-navbar:focus-within .nav {
@@ -132,10 +113,9 @@ button {
   width: 80vw;
   height: calc(100vh - 54px);
   margin: 0;
-  padding: 0;
+  padding: 1rem 2rem;
   position: absolute;
   background-color: #ccc;
-  padding: 1rem 2rem;
   right: 0;
   bottom: 0;
   display: none;
